# mirakel-hs

./: Application.hs  Foundation.hs  Import.hs  LICENSE  Model.hs  Settings.hs  devel.hs  main.hs  mirakel.cabal  mirakel.sqlite3
Handler/: List.hs  Task.hs
Model/: Create.hs  Types.hs  Update.hs
Settings/: Development.hs
Util/: Auth.hs  ListMovement.hs
config/: keter.yaml  models  routes  sqlite.yml
deploy/: Procfile
